Fix contrast of selected text background color

--- a/styles/base.less
+++ b/styles/base.less
@@ -55,7 +55,7 @@ atom-text-editor {
     }
 
     .selection .region {
-        background-color: @syntax-selection-color;
+        background-color: @syntax-selection-background-color;
     }
 }
 
