--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,25 +1,25 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@bright-white: #fff;
-@off-white:    #f5f5f5;
+@bright-white:   #fff;
+@off-white:      #f5f5f5;
 
-@subtle-gray:  #d6dfe0;
-@light-gray:   #b8bcbe;
-@gray:         #9E9E9E;
-@dark-gray:    #706c6c;
-@darker-gray:  #333;
+@subtle-gray:    #d6dfe0;
+@light-gray:     #b8bcbe;
+@gray:           #9E9E9E;
+@dark-gray:      #706c6c;
+@darker-gray:    #333;
 
-@lime:         #a9d68a;
-@mint:         #80cac1;
-@cyan:         #68b3bd;
-@blue:         #799ed8;
-@violet:       #b388c3;
-@pink:         #e77abb;
-@rose:         #c37b8c;
-@red:          #c36363;
-@salmon:       #e89693;
-@peach:        #eaae95;
-@gold:         #fbce76;
+@lime:           #a9d68a;
+@mint:           #80cac1;
+@cyan:           #68b3bd;
+@blue:           #799ed8;
+@violet:         #b388c3;
+@pink:           #e77abb;
+@rose:           #c37b8c;
+@red:            #c36363;
+@salmon:         #e89693;
+@peach:          #eaae95;
+@gold:           #fbce76;
 
 
-@highlight-fill:  #adeee2;
+@highlight-fill: #222;
